--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "read_file",
         "material_load_shader",
         "material_load_mesh",
-        "material_load_texture"
+        "material_load_texture",
+        "get_camera_position",
+        "set_camera_position"
     ]
 }
